--- a/src/js/containers/Mine/Coin/index.scss
+++ b/src/js/containers/Mine/Coin/index.scss
@@ -7,10 +7,10 @@
   color: #ffffff;
   justify-content: space-between;
   .leftCon{
-    width: 1rem;
     height: 1rem;
     position: absolute;
     left: 0;
+    padding-left:.24rem;
   }
   .rightCon{
     height: 1rem;
