--- a/src/js/containers/Mine/Order/OrderDetails/index.scss
+++ b/src/js/containers/Mine/Order/OrderDetails/index.scss
@@ -28,7 +28,7 @@
     width: 96%;
     margin: 0 2%;
     float: left;
-    //border-bottom: 1px solid #dcdcdc;
+    border-bottom: 1px solid #dcdcdc;
     .adressImg {
       margin-left: 1%;
       margin-right: .28rem;
@@ -82,7 +82,6 @@
     margin: 0 2%;
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid #dcdcdc;
     .MImg {
       margin-left: 1%;
       margin-right: .28rem;
